--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-Hello World
+<!DOCTYPE HTML>
+
+
+
+<html>
+<head>
+    <title>Felipe Escoto</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+</head>
+<body>
+    <header id="sidebar">
+        <img class="avatar" src="images/profile.jpg"/>
+        <p> <b>Felipe Escoto</b><br> Software engineer, and elementary developer </p>
+    </header>
+
+    <div id="main">
+        <!-- Who am i
+        <section id="who">
+            <h1> Lorem ipsum dolor sit amet, vel senserit theophrastus ad, ne adipisci delicatissimi ius. </h1>
+            <p> Eleifend petentium gubergren ea vis, eos ea labore ponderum praesent, nusquam mnesarchum id qui. Essent bonorum an vim, luptatum periculis ei eam, vix ut modus consul vocent. Id primis conclusionemque usu. Perfecto partiendo disputando sea cu. </p>
+        </section> -->
+
+        <!-- My projects -->
+        <section id="projects">
+            <h2> Projects I've Worked On:</h2>
+
+            <div class="item">
+                <a href="https://elementary.io">
+                    <img src="images/elementary.png"/></a>
+                <span class="caption"> elementary OS: Desktop Developer</span>
+            </div>
+
+            <div class="item">
+                <a href="https://github.com/Philip-Scott/Notes-up">
+                    <img src="https://github.com/Philip-Scott/Notes-up/blob/master/Screenshot.png?raw=true"/></a>
+                <span class="caption">Notes-up - Markdown notes editor</span>
+            </div>
+
+            <div class="item">
+                <a href="https://github.com/elementary-tweaks/elementary-tweaks">
+                    <img src="images/preferences-desktop-tweaks.svg"/> </a>
+                <span class="caption"> elementary tweaks</span>
+            </div>
+
+
+        </section>
+    </div>
+
+</body>
+</html>
