--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 <body>
-    <header id="sidebar">
+    <header class="paralax" id="sidebar">
         <img class="avatar" src="images/profile.jpg"/>
         <p> <b>Felipe Escoto</b><br> Software engineer, and elementary developer </p>
     </header>
 
     <div id="main">
-        <!-- Who am i
+        <!-- Who am i -->
         <section id="who">
-            <h1> Lorem ipsum dolor sit amet, vel senserit theophrastus ad, ne adipisci delicatissimi ius. </h1>
-            <p> Eleifend petentium gubergren ea vis, eos ea labore ponderum praesent, nusquam mnesarchum id qui. Essent bonorum an vim, luptatum periculis ei eam, vix ut modus consul vocent. Id primis conclusionemque usu. Perfecto partiendo disputando sea cu. </p>
-        </section> -->
+            <h1> About me </h1>
+            <p> Hello! My name is Felipe Escoto, I am a 20 years old Software Engineer student, developer and Linux lover. This website mainly serves as a portfolio of the Open Source projects I’ve contributed to, or the ones I've created myself.   </p>
+        </section> 
 
         <!-- My projects -->
         <section id="projects">
@@ -43,10 +43,7 @@
                     <img src="images/preferences-desktop-tweaks.svg"/> </a>
                 <span class="caption"> elementary tweaks</span>
             </div>
-
-
         </section>
     </div>
-
 </body>
 </html>
