Fixed Notes-up image

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <div class="item">
                 <a href="https://github.com/Philip-Scott/Notes-up">
-                    <img src="https://github.com/Philip-Scott/Notes-up/blob/master/Screenshot.png?raw=true"/></a>
+                    <img src="https://raw.githubusercontent.com/Philip-Scott/Notes-up/c98b2e911dd9bfe424bd66f83ceecf088f46f2df/Screenshot.png"/></a>
                 <span class="caption">Notes-up - Markdown notes editor</span>
             </div>
 
