--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- Who am i -->
         <section id="who">
             <h1> About me </h1>
-            <p> Hello! My name is Felipe Escoto, I am a 21 years old Software Engineer student, developer and Linux lover. This website mainly serves as a portfolio of the Open Source projects I’ve contributed to, or the ones I've created myself.</p>
+            <p> Hello! My name is Felipe Escoto, I am a 21 year old Software Engineer student, developer and Linux lover. This website mainly serves as a portfolio of the Open Source projects I’ve contributed to, or the ones I've created myself.</p>
         </section> 
         
         
