Add Spice-up to projects

--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
                 <span class="caption">Notes-up - Markdown notes editor</span>
             </div>
 
+           <div class="item">
+                <a href="https://github.com/Philip-Scott/Spice-up">
+                    <img src="images/Spice-up.png"/></a>
+                <span class="caption">Spice-up - Create beautiful presentations</span>
+            </div>
+           
             <div class="item">
                 <a href="https://github.com/elementary-tweaks/elementary-tweaks">
                     <img src="images/preferences-desktop-tweaks.svg"/> </a>
