Hide appcenter button on mobile

--- a/spice-up/index.html
+++ b/spice-up/index.html
@@ -23,7 +23,7 @@ Open a Presentation</label>
     <span class="avalible">
       <h3>Avalible for elementary os</h3>
       <div class="buttons">
-          <a class="button-link" href="https://appcenter.elementary.io/com.github.philip-scott.spice-up">
+          <a class="button-link appcenter" href="https://appcenter.elementary.io/com.github.philip-scott.spice-up">
             <img src="https://appcenter.elementary.io/badge.svg" alt="Get it on AppCenter">
           </a>
           <span class="button button-link"><a href="https://github.com/Philip-Scott/spice-up"><i class="fa fa-github"></i> Github</a></span>
