basics items working

--- a/spice-up/index.html
+++ b/spice-up/index.html
@@ -13,7 +13,7 @@
 <body id="body">
  <div class="main">
   <div class="title">
-    <h1>Create Beautiful presentations</h1><br>
+    <h1>Create Beautiful Presentations</h1><br>
     <h2><b>Spice-Up</b>Web Viewer</h2>
     <input class="inputfile" id="the-file-input" type="file"/>
     <label class="input-file-button" for="the-file-input"><i class="fa fa-folder-open" aria-hidden="true"></i>
