--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div><div>a
         <ul id="carousel">
             <li class="carouselI">Software Engineer</li>
-            <li class="carouselI">Wizeline Engineer</li>
             <li class="carouselI">App Developer</li>
+            <li class="carouselI">Student</li>
         </ul></div>
         <script>
             $(document).ready(function() {
