--- a/spice-up/index.html
+++ b/spice-up/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Spice-Up - WebViewer</title>
+  <title>Spice-Up</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="assets/css/main.css" />
   <link rel="stylesheet" href="assets/viewer/spice-up.css">
@@ -14,10 +14,7 @@
  <div class="main">
   <div class="title">
     <h1>Create Beautiful Presentations</h1><br>
-    <h2><b>Spice-Up</b>Web Viewer</h2>
-    <input class="inputfile" id="the-file-input" type="file"/>
-    <label class="input-file-button" for="the-file-input"><i class="fa fa-folder-open" aria-hidden="true"></i>
-Open a Presentation</label>
+    <h2><b>Spice-Up</b></h2>
   </div>
   <div class="showcase">
     <span class="avalible">
